hphp/test/slow/typedef/typedef_duplicate4.php.expectf

Fatal error: The name Something is already defined as a class in %s on line 3
